# tap-sharepointsites

./: .gitignore  README.md  config_sample.json  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_sharepointsites/: __init__.py  client.py  file_stream.py  list_stream.py  pages_stream.py  streams.py  tap.py  text_stream.py  utils.py
tap_sharepointsites/file_handlers/: csv_handler.py  excel_handler.py
tap_sharepointsites/tests/: __init__.py  test_core.py  test_file_stream.py  test_list_stream.py  test_pages_stream.py  test_text_stream.py
tap_sharepointsites/tests/configuration/: __init__.py  drive_id_response.json  file_info_response.json  list_response_paginated.json  list_response_unpaginated.json  page_1_response.json  page_2_response.json  pages_response.json  sample.csv  sample_excel.xlsx  site_response.json  test_catalog.py  test_responses.py
